# blockchain

./: .gitignore  README.md  pyproject.toml
src/blockchain/: blockchain.py  node.py
src/blockchain/static/: style.css
src/blockchain/templates/: index.html  log.html
